# drum-processing

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  environment-dev.yml  environment.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
drum_processing/: __init__.py  cli.py  core.py
tests/: conftest.py  test_drum_processing.py
